# fluidfoam

./: AUTHORS.txt  Dockerfile  Makefile  README.rst  appveyor.yml  pyproject.toml  requirements.txt
.github/workflows/: build_and_pypi.yml  build_and_test.yml
data/wingMotion2D_simpleFoam/constant/polyMesh/: boundary  faces  neighbour  owner  points
doc/: environment.yml  index.rst  requirements.txt
examples/: plot_contour.py  plot_time_series.py
fluidfoam/: PostproFoam.py  __init__.py  _version.py  create1dprofile.py  meshdesign.py  meshvisu.py  openfoamsimu.py  processing1d.py  readof.py  readpostpro.py  test_PostproFoam.py  test_create1dprofil.py  test_create1dprofilDFSEM.py  test_meshdesign.py  test_meshvisu.py  test_openfoamsimu.py  test_read.py  test_readpostpro.py
output_samples/asciigz/1d_profil/: alpha.xy
output_samples/box/0/: U  nut  p
